--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@emailjs/browser": "^3.6.2",
+    "framer-motion": "^6.5.1",
     "react": "^18.0.0",
     "react-dom": "^18.0.0"
   },
