--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@emailjs/browser": "^3.6.2",
     "framer-motion": "^6.5.1",
+    "number-counter": "^1.0.3",
     "react": "^18.0.0",
     "react-dom": "^18.0.0"
   },
